-First version of a dynamic legend widget for styled features. It can be enabled by adding a "showLegend":true property to the dashboard definition in project.json. -Fixed a bug in getColor function. (domain and range arraylengths in d3 should be the same) -Changed default style color to darker orange, to increase contrast in styled features. -Fixed bug where current stylecolor gradient was not visible in IE.
-Disable admin mode for zodk.

--- a/csComp/includes/css/csStyles.css
+++ b/csComp/includes/css/csStyles.css
@@ -126,8 +126,9 @@ html, body, #container {
 
 .legend-description {
     display: block;
-    font-size: 16px;
-    color: blue;
+    font-size: 16px;    
+    font-weight: bold;
+    color: black;
 }
 .legend-entry-item-d {
     list-style-type: none;
